--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,8 @@
-.select {
-    text-align: center;
-    
+.drop{
+    padding: 15px;
+    background-color:rgb(239, 239, 245);
+    margin-bottom: 10px;
     
 }
+
+
